[gd_scene load_steps=2 format=3 uid="uid://dja7a8xd0hgck"]

[ext_resource type="Script" path="res://Scenes/Interface/main_menu_ui.gd" id="1_jfyld"]

[node name="Main_Menu_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jfyld")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -224.0
offset_right = 105.5
offset_bottom = -169.0
grow_horizontal = 2
grow_vertical = 2
text = "How to Establish a Tin Pot Puppet Dictatorship"
autowrap_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.5
offset_right = 50.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Play" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Play"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit
"

[connection signal="pressed" from="VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
